2016-10-25  Edward Jones  <ed.jones@embecosm.com>

	* lib/ML/C5.cpp (C5Driver::train): Resize vectors for classifier
	trees to be included.

2016-09-23  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h (Database::garbageCollect): Add function.
	* lib/Database.cpp (Database::garbageCollect): Add function
	implementation.
	* lib/Driver.cpp: Add handling for --garbage-collect mode.

2016-09-22  Edward Jones  <ed.jones@embecosm.com>

	* lib/ML/C5.cpp: Close the C5.0 .data file before C5 tries to use it.
	Fix other bugs.

2016-09-22  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp: Merge FeatureInstance table with
	FeatureSetFeatures, and ParameterInstance table with
	ParameterSetParameters.

2016-09-22  Edward Jones  <ed.jones@embecosm.com>

	 * include/mageec/Database.h (DatabaseTransaction): Rename to
	 SQLTransaction.
	 * lib/Database.cpp: Rename DatabaseTransactions to SQLTransaction

2016-09-22  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Util.h (Metric): Remove type.
	* include/mageec/Types.h (metricToString stringToMetric):
	Remove functions.

2016-09-22  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/AttributeSet.h (AttributeSet::dump): Added function.
	* include/mageec/Framework.h (Framework::print)
	(Framework::dump): Likewise.
	* include/mageec/TrainedML (TrainedML::print)
	(TrainedML::dump): Likewise.
	* lib/Framework.cpp (Framework::print): Added function implementation.
	* lib/TrainedML.cpp (TrainedML::print): Likewise.

2016-09-22  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/AttributeSet.h (AttributeSet::hash)
	(AttributeSet::operator< AttributeSet::operator==)
	(AttributeSet::operator!= AttributeSet::compare): Add functions.
	* include/mageec/Database.h (Database::getFeatures): Replace with
	Database::getFeatureGroupFeatures.
	(Database::getFeatureSetFeatures): Added function.
	(Database::getFeatureGroupFeatures): Likewise.
	* include/mageec/Result.h (Result::getFeatures)